src/test/ui/unsized-locals/unsized-exprs2.stderr
warning: the feature `unsized_locals` is incomplete and may cause the compiler to crash
  --> $DIR/unsized-exprs2.rs:1:36
   |
LL | #![feature(unsized_tuple_coercion, unsized_locals, unsized_fn_params)]
   |                                    ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `unsized_fn_params` is incomplete and may cause the compiler to crash
  --> $DIR/unsized-exprs2.rs:1:52
   |
LL | #![feature(unsized_tuple_coercion, unsized_locals, unsized_fn_params)]
   |                                                    ^^^^^^^^^^^^^^^^^

error[E0508]: cannot move out of type `[u8]`, a non-copy slice
  --> $DIR/unsized-exprs2.rs:23:5
   |
LL |     udrop::<[u8]>(foo()[..]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     cannot move out of here
   |     move occurs because value has type `[u8]`, which does not implement the `Copy` trait

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0508`.
